# dmn

./: Makefile  README.md  compose.yml
.github/: pre-commit
.github/workflows/: release.yaml
app/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yml  config.toml
app/.sqlx/: query-2199d77ace9dfa4cd493fe218b45d3b833291a4e671d0205317496af255093d1.json  query-8df42b81505bef82ebcdcfe7c88cc236bfdc1aff23ca9e263ca00cedac1c8da7.json  query-9110ac3bb279b2ffbe516716a6146ba1bb59783b45e39656034fcb003174c47c.json  query-db58a1f8e2b11040bfc01191cba8fad1afbef682c81874fe91f8440be4a6b74f.json  query-e1f72486bee43ac0552e0491e9767cabec7b578aa15b73e7e29cbb247e7e6736.json
app/migrations/: 20250415234313_init.sql  20250416014907_domain_meta.sql  20250416015730_domains_refactor.sql  20250416020905_dnsdomains_refactor.sql  20250416050616_domain_expiry.sql  20250416052536_domain_autorenew.sql  20250418040330_dns_domains_patch.sql  20250418041243_domains_whois_privacy.sql  20250421021241_notifications.sql  20250421054710_domain_tld_prices.sql
app/src/: cache.rs  database.rs  main.rs  state.rs
app/src/cmd/: mod.rs  porkbun.rs
app/src/models/: mod.rs
app/src/models/domain/: mod.rs
app/src/models/domain_tld_price/: mod.rs
app/src/models/notification/: mod.rs
app/src/modules/: domains.rs  mod.rs
app/src/modules/cloudflare/: dns.rs  domains.rs  domains_endpoint.rs  mod.rs
app/src/modules/ntfy/: mod.rs
app/src/modules/porkbun/: domains.rs  mod.rs  pricing.rs
app/src/modules/telegram/: mod.rs
app/src/modules/whois/: mod.rs  servers.json
app/src/server/: README.md  cal.rs  index.html  mod.rs  ratelimit.rs  schedule.rs
app/src/server/domains/: mod.rs
app/src/util/: color.rs  mod.rs  serde_strint.rs
app/src/web/: mod.rs  package.json  pnpm-lock.yaml  tailwind.config.js
app/src/web/public/: index.css
samples/: domains.ics  whois-luc-computer.json
